# platform-runtime-tools

./: CMakeLists.txt  README.md
etc/: registry.conf.in
scriptlets/core/: 50_intel.sh
scriptlets/detect/core/: 10_generic_hardware.sh  30_x86_64.sh  50_intel.sh  50_raspberry-pi.sh  50_renesas-rcar.sh
scriptlets/devices/: 10_generic_device.sh
services/: platform-core-customize.service  platform-core-customize.service.in  platform-core-detection.service.in  platform-devices-customize.service  platform-devices-customize.service.in  platform-devices-detection.service.in
test/: pr-registry_test  pr-registry_test.conf
